--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./asset/css/reset.css">
+	<link rel="stylesheet" href="./asset/css/style.css">
 	<link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-	<div class="webgl"></div>
+	<div class="wrap">
+		<header></header>
+		<main>
+			<section class="keyvisual"> </section>
+			<section class="webgl"></section>
+
+		</main>
+		<footer></footer>
+	</div>
 </body>
 
 </html>
